# prj012-dx12

./: .gitignore  Build.bat  CMakeLists.txt
Assets/: CMakeLists.txt
Reference/: D3D12Lite.cpp  D3D12Lite.h  main.cpp
Source/: Asset.cpp  Asset.h  AssetTable.cpp  BitFlags.h  CMakeLists.txt  CoreDefs.h  CoreTypes.h  D3D12Helpers.h  Defines.h  Format.h  Geometry.cpp  Geometry.h  LoadImage.cpp  LoadImage.h  Log.cpp  Log.h  MathLib.h  MathUtility.h  PlatformContext.h  PrimitiveTypes.h  Rendering.cpp  Rendering.h  Utility.h  Win32Main.cpp
Source/Platform/: Application.cpp  Application.h  Input.cpp  Input.h  Jobs.cpp  Jobs.h  Platform.cpp  Platform.h  PlatformContext.h
Source/Platform/DX12/: DX12.cpp  DX12.h  DX12Utility.h
Source/Platform/Win32/: FuckYou.cpp  Win32Main.cpp  Win32Platform.cpp  Win32Platform.h  Win32Window.cpp
Source/Shaders/: Common.hlsl  Default.hlsl  Shared.h  cube.hlsl  cube_ps.hlsl  cube_vs.hlsl
